basis-function-reduction

--- a/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/DeepKriging_3D.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/DeepKriging_3D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "density_data = pd.read_csv(\"../Curated_data/final_dataset.csv\", low_memory=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Density Data after removing rows with 'Name' starting with 'R' followed by numbers:\n",
+      "           Name         X         Y         Z  Density_gcm3  RQD_Pct  \\\n",
+      "0     KV-NME001  0.437814  0.509816  0.461455      0.400922   0.8800   \n",
+      "1     KV-NME001  0.438061  0.509789  0.460591      0.410138   0.8800   \n",
+      "2     KV-NME001  0.448174  0.508800  0.426068      0.442396   0.9900   \n",
+      "3     KV-NME001  0.448431  0.508777  0.425204      0.442396   0.9900   \n",
+      "4     KV-NME001  0.448683  0.508755  0.424340      0.442396   0.9900   \n",
+      "...         ...       ...       ...       ...           ...      ...   \n",
+      "2613      KV365  0.629186  0.001755  0.432766      0.543779   0.9235   \n",
+      "2614      KV365  0.629096  0.001314  0.431988      0.539171   0.9235   \n",
+      "2615      KV365  0.629011  0.000877  0.431205      0.543779   0.8584   \n",
+      "2616      KV365  0.628921  0.000436  0.430427      0.525346   0.8584   \n",
+      "2617      KV365  0.628835  0.000000  0.429644      0.529954   0.8584   \n",
+      "\n",
+      "        Cr_ppm  CP_Total  PO_Total  PY_Total  ...  phi_6393  phi_6394  \\\n",
+      "0     0.127305     0.250  0.066667       0.0  ...       0.0       0.0   \n",
+      "1     0.160479     0.250  0.066667       0.0  ...       0.0       0.0   \n",
+      "2     0.128743     0.250  0.066667       0.0  ...       0.0       0.0   \n",
+      "3     0.141317     0.375  0.133333       0.0  ...       0.0       0.0   \n",
+      "4     0.153293     0.500  0.200000       0.0  ...       0.0       0.0   \n",
+      "...        ...       ...       ...       ...  ...       ...       ...   \n",
+      "2613  0.078443     0.050  0.200000       0.0  ...       0.0       0.0   \n",
+      "2614  0.074850     0.050  0.200000       0.0  ...       0.0       0.0   \n",
+      "2615  0.076647     0.050  0.200000       0.0  ...       0.0       0.0   \n",
+      "2616  0.077246     0.050  0.200000       0.0  ...       0.0       0.0   \n",
+      "2617  0.077844     0.050  0.200000       0.0  ...       0.0       0.0   \n",
+      "\n",
+      "      phi_6395  phi_6396  phi_6397  phi_6398  phi_6399  phi_6400  phi_6401  \\\n",
+      "0          0.0       0.0       0.0       0.0       0.0       0.0       0.0   \n",
+      "1          0.0       0.0       0.0       0.0       0.0       0.0       0.0   \n",
+      "2          0.0       0.0       0.0       0.0       0.0       0.0       0.0   \n",
+      "3          0.0       0.0       0.0       0.0       0.0       0.0       0.0   \n",
+      "4          0.0       0.0       0.0       0.0       0.0       0.0       0.0   \n",
+      "...        ...       ...       ...       ...       ...       ...       ...   \n",
+      "2613       0.0       0.0       0.0       0.0       0.0       0.0       0.0   \n",
+      "2614       0.0       0.0       0.0       0.0       0.0       0.0       0.0   \n",
+      "2615       0.0       0.0       0.0       0.0       0.0       0.0       0.0   \n",
+      "2616       0.0       0.0       0.0       0.0       0.0       0.0       0.0   \n",
+      "2617       0.0       0.0       0.0       0.0       0.0       0.0       0.0   \n",
+      "\n",
+      "      phi_6402  \n",
+      "0          0.0  \n",
+      "1          0.0  \n",
+      "2          0.0  \n",
+      "3          0.0  \n",
+      "4          0.0  \n",
+      "...        ...  \n",
+      "2613       0.0  \n",
+      "2614       0.0  \n",
+      "2615       0.0  \n",
+      "2616       0.0  \n",
+      "2617       0.0  \n",
+      "\n",
+      "[2618 rows x 6413 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming 'density_data' is your DataFrame\n",
+    "# For example:\n",
+    "# density_data = pd.read_csv('your_data.csv')\n",
+    "\n",
+    "# Remove rows where 'Name' starts with 'R' followed by numbers\n",
+    "density_data_filtered = density_data[~density_data['Name'].str.match(r'^R\\d+$')]\n",
+    "\n",
+    "# Display the filtered DataFrame\n",
+    "print(\"Density Data after removing rows with 'Name' starting with 'R' followed by numbers:\")\n",
+    "print(density_data_filtered)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['KV-NME001', 'KV136', 'KV139', 'KV148', 'KV151', 'KV154', 'KV156',\n",
+       "       'KV165', 'KV171', 'KV172', 'KV173', 'KV175', 'KV307', 'KV308',\n",
+       "       'KV309', 'KV310', 'KV311', 'KV312', 'KV313', 'KV314', 'KV315',\n",
+       "       'KV316', 'KV317', 'KV318', 'KV322', 'KV323', 'KV324', 'KV34',\n",
+       "       'KV350', 'KV361', 'KV376', 'KV387', 'KV99', 'KV294', 'KV365'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "density_data['Name'].unique()"
    ]
   },
   {
