--- a/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/Explanations/Explanations.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/DeepKriging/Explanations/Explanations.ipynb
@@ -21,7 +21,7 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import scipy as sp\n",
     "import scipy.cluster\n",
-    "import shap"
+    "import shap\n"
    ]
   },
   {
