--- a/Paper 3 PhD BNNs for multivariate predictions/DK_Group_Shapley_VS/Explanations.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/DK_Group_Shapley_VS/Explanations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1161,7 @@
     "\n",
     "# Covariates + phi - active variable\n",
     "    size = len(covariates) + 1 - 1\n",
-    "\n",
+    "# Number of covariates without counting selected one\n",
     "    numcovar = len(covariates) - 1\n",
     "############### Phase 1: create all combinations of the data WITH the column of interest's original values ###############\n",
     "    \n",
@@ -1170,11 +1170,12 @@
     "# The first dataframe is all columns are active\n",
     "    new_dataframes_column.append(pd.concat([X_column_c.copy(), X_column], axis=1))\n",
     "\n",
-    "# The first loop goes over the number of selected columns. r represents the number of inactive cols.\n",
+    "# The first loop goes over the number of selected columns. r represents the number of inactive cols. The range is equal to p (number of covariates, confirm)\n",
     "# The second loop goes over all the combinations of the selected columns excluding the phi variables\n",
     "    for r in range(1, len(X_column_c.columns[-numcovar:]) + 1):\n",
     "        for combo in combinations(X_column_c.columns[-numcovar:], r):\n",
     "            new_df = X_column_c.copy()\n",
+    "            # 0 to all column names in combo  \n",
     "            new_df[list(combo)] = 0\n",
     "            new_dataframes_column.append(pd.concat([new_df, X_column], axis=1))\n",
     "\n",
