--- a/Paper 3 PhD BNNs for multivariate predictions/NN Multivariate/Dimensionality reduction one cluster.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/NN Multivariate/Dimensionality reduction one cluster.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deposit_data = pd.read_csv('../Curated_data/cluster_0_data.csv', low_memory=False)"
+    "#deposit_data = pd.read_csv('../Curated_data/cluster_0_data.csv', low_memory=False)"
    ]
   },
   {
