--- a/Paper 3 PhD BNNs for multivariate predictions/DK_Batch_Shapley/Deepkriging_benchmarking.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/DK_Batch_Shapley/Deepkriging_benchmarking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -65,42 +65,30 @@
       "Metrics for Deepkriging\n",
       "\n",
       "Average Metrics Across Folds:\n",
-      "  Average MSE: 0.0030\n",
-      "  Average MAE: 0.0395\n",
-      "  Average adjusted R2: 1.2264\n",
-      "  STD MSE: 0.0004\n",
-      "  STD MAE: 0.0025\n",
-      "  STD adjusted R2: 0.0539\n",
+      "  Average MSE: 0.0029\n",
+      "  Average MAE: 0.0389\n",
+      "  Average Adjusted R2: 1.2157\n",
       "\n",
       "Metrics for regular DNN\n",
       "\n",
       "Average Metrics Across Folds:\n",
-      "  Average MSE: 0.0078\n",
-      "  Average MAE: 0.0573\n",
-      "  Average adjusted R2: 0.4918\n",
-      "  STD MSE: 0.0027\n",
-      "  STD MAE: 0.0067\n",
-      "  STD adjusted R2: 0.1745\n",
+      "  Average MSE: 0.0071\n",
+      "  Average MAE: 0.0561\n",
+      "  Average Adjusted R2: 0.5318\n",
       "\n",
       "Metrics for Deepkriging with covariates\n",
       "\n",
       "Average Metrics Across Folds:\n",
-      "  Average MSE: 0.0026\n",
-      "  Average MAE: 0.0353\n",
-      "  Average adjusted R2: 1.1925\n",
-      "  STD MSE: 0.0006\n",
-      "  STD MAE: 0.0034\n",
-      "  STD adjusted R2: 0.0620\n",
+      "  Average MSE: 0.0028\n",
+      "  Average MAE: 0.0358\n",
+      "  Average Adjusted R2: 1.2034\n",
       "\n",
       "Metrics for regular DNN with covariates\n",
       "\n",
       "Average Metrics Across Folds:\n",
-      "  Average MSE: 0.0066\n",
-      "  Average MAE: 0.0534\n",
-      "  Average adjusted R2: 0.5575\n",
-      "  STD MSE: 0.0009\n",
-      "  STD MAE: 0.0024\n",
-      "  STD adjusted R2: 0.0804\n"
+      "  Average MSE: 0.0075\n",
+      "  Average MAE: 0.0536\n",
+      "  Average Adjusted R2: 0.4940\n"
      ]
     }
    ],
@@ -131,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
