--- a/Paper 3 PhD BNNs for multivariate predictions/DK_Batch_Shapley/Explanations_reg_Shap.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/DK_Batch_Shapley/Explanations_reg_Shap.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,9 @@
     "    X_column = filter(column)\n",
     "    selected_columns = select_columns(x_test, column)\n",
     "    X_column_c = x_test[selected_columns]\n",
+    "    covariates = ['CP_Total', 'PO_Total', 'PY_Total', 'RQD_Pct', 'Cr_ppm']\n",
     "    covariates_minus_j = covariates.copy()\n",
+    "    covariates_minus_j.append(phi_columns)\n",
     "    covariates_minus_j.remove(column)\n",
     "\n",
     "    new_dataframes_column = []\n",
@@ -142,7 +144,17 @@
     "            new_dataframes_column.append(S)\n",
     "            new_dataframes_column.append(S_copy)\n",
     "\n",
+    "            deposit_data_c = deposit_data.copy()\n",
+    "            deposit_data_c[list(combo)] =0\n",
+    "            deposit_data_c_j = deposit_data_c.copy()\n",
+    "            deposit_data_c_j[column] = 0\n",
+    "\n",
+    "            trainer_regular = DeepKrigingTrainer(deposit_data_c, covariates, regular_nn=False, plot_errors=False)\n",
+    "            trainer_regular.train_neural_network(mode=\"regular\", test_size=0.2)\n",
     "            pred_S = trainer_regular.model2(torch.tensor(S.values, dtype=torch.float32)).detach().numpy().flatten()\n",
+    "\n",
+    "            trainer_regular = DeepKrigingTrainer(deposit_data_c_j, covariates, regular_nn=False, plot_errors=False)\n",
+    "            trainer_regular.train_neural_network(mode=\"regular\", test_size=0.2)\n",
     "            pred_S_j = trainer_regular.model2(torch.tensor(S_copy.values, dtype=torch.float32)).detach().numpy().flatten()\n",
     "\n",
     "            delta_j = pred_S - pred_S_j\n",
@@ -150,14 +162,14 @@
     "            G_fact = math.factorial(size_G)\n",
     "            size_S = size_G - len(combo) - 1  \n",
     "            weight = math.factorial(size_S)*math.factorial(size_G - size_S - 1)*(1/G_fact)\n",
-    "            omega += weight*delta_j\n",
+    "            omega += weight*delta_j # sum extends over all subsets of the power set of covariates_minus_j (both for loops are needed)\n",
     "\n",
     "    return new_dataframes_column, omega"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,9 +210,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'phi_columns' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [7], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m covariates:\n\u001b[1;32m----> 2\u001b[0m     \u001b[43mexec\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mpermutations2_\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mcol\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m, omega_\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mcol\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m = subgroups2(\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mcol\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m)\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m<string>:1\u001b[0m\n",
+      "Cell \u001b[1;32mIn [5], line 10\u001b[0m, in \u001b[0;36msubgroups2\u001b[1;34m(column)\u001b[0m\n\u001b[0;32m      8\u001b[0m covariates \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCP_Total\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPO_Total\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPY_Total\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRQD_Pct\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCr_ppm\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      9\u001b[0m covariates_minus_j \u001b[38;5;241m=\u001b[39m covariates\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m---> 10\u001b[0m covariates_minus_j\u001b[38;5;241m.\u001b[39mappend(\u001b[43mphi_columns\u001b[49m)\n\u001b[0;32m     11\u001b[0m covariates_minus_j\u001b[38;5;241m.\u001b[39mremove(column)\n\u001b[0;32m     13\u001b[0m new_dataframes_column \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'phi_columns' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "for col in covariates:\n",
@@ -209,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
