--- a/Paper 3 PhD BNNs for multivariate predictions/DK_Batch_Shapley/Data_pre-processing.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/DK_Batch_Shapley/Data_pre-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample Number\n",
+      "Name\n",
+      "Depth From\n",
+      "Depth To\n",
+      "X\n",
+      "Y\n",
+      "Z\n",
+      "Length\n",
+      "Alt1_Code\n",
+      "Alt1_Int\n",
+      "Alt1_Style\n",
+      "Alt2_Code\n",
+      "Alt2_Int\n",
+      "Alt2_Style\n",
+      "Au_ppb\n",
+      "Comments\n",
+      "Core_Angle\n",
+      "Core_Diameter\n",
+      "CoreLoss_m\n",
+      "Cumulate\n",
+      "DataSet\n",
+      "Date_Logged\n",
+      "Density\n",
+      "Density_gcm3\n",
+      "Density_kgm3\n",
+      "Dest\n",
+      "Gamma_uRh\n",
+      "Gangue_Min\n",
+      "Interval_Length\n",
+      "Ir_ppb\n",
+      "Ja\n",
+      "Jn\n",
+      "Jr\n",
+      "Lith1_Code\n",
+      "Logged_By\n",
+      "Min1_Code\n",
+      "Min1_Pct\n",
+      "Min1_Style\n",
+      "Min2_Code\n",
+      "Min2_Pct\n",
+      "Min2_Style\n",
+      "Min3_Code\n",
+      "Min3_Pct\n",
+      "Min3_Style\n",
+      "Ore_Type\n",
+      "Ori_Confidence\n",
+      "Orig_Lith\n",
+      "Os_ppb\n",
+      "Pd_ppb\n",
+      "Proportion (Alt1_Code)\n",
+      "Proportion (Alt1_Int)\n",
+      "Proportion (Alt1_Style)\n",
+      "Proportion (Alt2_Code)\n",
+      "Proportion (Alt2_Int)\n",
+      "Proportion (Alt2_Style)\n",
+      "Proportion (Comments)\n",
+      "Proportion (DataSet)\n",
+      "Proportion (Date_Logged)\n",
+      "Proportion (Gangue_Min)\n",
+      "Proportion (Lith1_Code)\n",
+      "Proportion (Logged_By)\n",
+      "Proportion (Min1_Code)\n",
+      "Proportion (Min1_Style)\n",
+      "Proportion (Min2_Code)\n",
+      "Proportion (Min2_Style)\n",
+      "Proportion (Min3_Code)\n",
+      "Proportion (Min3_Style)\n",
+      "Proportion (Ore_Type)\n",
+      "Proportion (Ori_Confidence)\n",
+      "Proportion (Orig_Lith)\n",
+      "Proportion (samp_id)\n",
+      "Proportion (SampleID)\n",
+      "Proportion (Sulph1_Code)\n",
+      "Proportion (Sulph1_Style)\n",
+      "Proportion (Sulph2_Code)\n",
+      "Proportion (Sulph2_Style)\n",
+      "Proportion (Sulph3_Code)\n",
+      "Proportion (Sulph3_Style)\n",
+      "Proportion (Vein1_Comp)\n",
+      "Proportion (Vein1_Style)\n",
+      "Proportion (Vein2_Comp)\n",
+      "Proportion (Vein2_Style)\n",
+      "Pt_ppb\n",
+      "Q\n",
+      "Reading_den\n",
+      "Reading_susc\n",
+      "Recovery_m\n",
+      "Recovery_Pct\n",
+      "Res_Wenner_ohmm\n",
+      "Rh_ppb\n",
+      "RQD_m\n",
+      "RQD_Pct\n",
+      "samp_id\n",
+      "SampleID\n",
+      "Sulph1_Code\n",
+      "Sulph1_Pct\n",
+      "Sulph1_Style\n",
+      "Sulph2_Code\n",
+      "Sulph2_Pct\n",
+      "Sulph2_Style\n",
+      "Sulph3_Code\n",
+      "Sulph3_Pct\n",
+      "Sulph3_Style\n",
+      "Susc_SI\n",
+      "Vein1_Comp\n",
+      "Vein1_Pct\n",
+      "Vein1_Style\n",
+      "Vein2_Comp\n",
+      "Vein2_Pct\n",
+      "Vein2_Style\n",
+      "Weathering\n",
+      "Ag_ppm\n",
+      "Al_pct\n",
+      "Ars_ppm\n",
+      "B_ppm\n",
+      "Ba_ppm\n",
+      "Be_ppm\n",
+      "Bi_ppm\n",
+      "Ca_pct\n",
+      "Cd_ppm\n",
+      "Ce_ppm\n",
+      "Cl_ppm\n",
+      "Co_ppm\n",
+      "Cr_ppm\n",
+      "Cu_pct\n",
+      "Fe_pct\n",
+      "Ga_ppm\n",
+      "IP_pct\n",
+      "K_pct\n",
+      "La_ppm\n",
+      "Li_ppm\n",
+      "Mg_pct\n",
+      "Mn_ppm\n",
+      "Mo_ppm\n",
+      "Na_pct\n",
+      "Nb_ppm\n",
+      "Ni_pct\n",
+      "NiCuEq_pct\n",
+      "NiS_pct\n",
+      "OlivineTot_pct\n",
+      "P_ppm\n",
+      "Pb_ppm\n",
+      "Rb_ppm\n",
+      "Re_ppm\n",
+      "S_pct\n",
+      "Sb_ppm\n",
+      "Sc_ppm\n",
+      "Si_pct\n",
+      "Sn_ppm\n",
+      "Sr_ppm\n",
+      "SulphTot_pct\n",
+      "Te_ppm\n",
+      "Th_ppm\n",
+      "Ti_pct\n",
+      "Tl_ppm\n",
+      "U_ppm\n",
+      "V_ppm\n",
+      "W_ppm\n",
+      "Y_ppm\n",
+      "Zn_ppm\n",
+      "Zr_ppm\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in density_data.columns:\n",
+    "    print(col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,14 +338,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\23478671\\AppData\\Local\\Temp\\ipykernel_11944\\1682930821.py:9: SettingWithCopyWarning:\n",
+      "C:\\Users\\23478671\\AppData\\Local\\Temp\\ipykernel_19680\\1682930821.py:9: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
@@ -388,7 +566,7 @@
        "[2618 rows x 10 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -451,14 +629,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\23478671\\AppData\\Local\\Temp\\ipykernel_11944\\3257975698.py:7: SettingWithCopyWarning:\n",
+      "C:\\Users\\23478671\\AppData\\Local\\Temp\\ipykernel_19680\\3257975698.py:7: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -466,7 +644,7 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
-      "C:\\Users\\23478671\\AppData\\Local\\Temp\\ipykernel_11944\\3257975698.py:15: SettingWithCopyWarning:\n",
+      "C:\\Users\\23478671\\AppData\\Local\\Temp\\ipykernel_19680\\3257975698.py:15: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -474,7 +652,7 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
-      "C:\\Users\\23478671\\AppData\\Local\\Temp\\ipykernel_11944\\3257975698.py:20: SettingWithCopyWarning:\n",
+      "C:\\Users\\23478671\\AppData\\Local\\Temp\\ipykernel_19680\\3257975698.py:20: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -506,6 +684,19 @@
     "covariates = ['CP_Total','PO_Total', 'PY_Total','RQD_Pct', 'Cr_ppm' ]\n",
     "scaler = MinMaxScaler()\n",
     "deposit_data.loc[:, [mineral] +covariates] = scaler.fit_transform(deposit_data.loc[:,[mineral] + covariates])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "all_indexes = deposit_data.index\n",
+    "\n",
+    "# Save the indexes to a CSV file\n",
+    "all_indexes.to_series().to_csv('indexes.csv', index=False)\n"
    ]
   },
   {
