--- a/Paper 3 PhD BNNs for multivariate predictions/DK_Batch_Shapley/Deepkriging_benchmarking.ipynb
+++ b/Paper 3 PhD BNNs for multivariate predictions/DK_Batch_Shapley/Deepkriging_benchmarking.ipynb
@@ -8,12 +8,10 @@
    "source": [
     "from dk_model import DeepKrigingTrainer\n",
     "import pandas as pd \n",
-    "\n",
     "import numpy as np\n",
     "from sklearn.model_selection import KFold\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from pykrige.ok import OrdinaryKriging\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score"
+    "from pykrige.ok import OrdinaryKriging"
    ]
   },
   {
@@ -22,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deposit_data = pd.read_csv(\"../Curated_data/final_dataset_1_no_0.csv\", low_memory=False)\n"
+    "deposit_data = pd.read_csv(\"Data/final_dataset_1_no_0.csv\", low_memory=False)\n"
    ]
   },
   {
@@ -154,7 +152,6 @@
     "    X_cv_train, X_cv_test = x[train_index], x[test_index]\n",
     "    y_cv_train, y_cv_test = y[train_index], y[test_index]\n",
     "\n",
-    "    # Fit a linear regression model\n",
     "    regression_model = LinearRegression()\n",
     "    regression_model.fit(X_cv_train, y_cv_train)\n",
     "\n",
@@ -172,12 +169,9 @@
     "    # Combine regression predictions with kriging predictions\n",
     "    final_cv_predictions = y_cv_pred + kriging_pred\n",
     "\n",
-    "    # Calculate and store metrics\n",
     "    mse = np.mean((y_cv_test - final_cv_predictions) ** 2)\n",
     "    mae = np.mean(np.abs(y_cv_test - final_cv_predictions))\n",
     "    \n",
-    " #   sst = np.mean((y_cv_test - np.mean(y_cv_test)) ** 2) * len(y_cv_test)\n",
-    " #   ssr = np.mean((final_cv_predictions - y_cv_test) ** 2) * len(y_cv_test)\n",
     "    sst = np.mean((y_cv_test - np.mean(y_cv_test)) ** 2) \n",
     "    ssr = np.mean((final_cv_predictions - y_cv_test) ** 2) \n",
     "    r2 = 1 - (ssr / sst)\n",
@@ -191,8 +185,6 @@
     "    mse_list.append(mse)\n",
     "    mae_list.append(mae)\n",
     "    adjusted_r2_list.append(adjusted_r2)\n",
-    "\n",
-    "# Calculate mean metrics across folds\n",
     "\n",
     "\n",
     "# Print average metrics across folds\n",
@@ -223,7 +215,7 @@
    "source": [
     "np.random.seed(42)\n",
     "\n",
-    "y = deposit_data['Density_gcm3'].values[:, np.newaxis]  # Keep variable as the output\n",
+    "y = deposit_data['Density_gcm3'].values[:, np.newaxis]  \n",
     "x = deposit_data[['X', 'Y', 'Z']].values\n",
     "x = x.reshape(len(deposit_data), 3)\n",
     "\n",
@@ -244,7 +236,6 @@
     "\n",
     "    final_cv_predictions =  kriging_pred\n",
     "\n",
-    "    # Calculate and store metrics\n",
     "    mse = np.mean((y_cv_test - final_cv_predictions) ** 2)\n",
     "    mae = np.mean(np.abs(y_cv_test - final_cv_predictions))\n",
     "    mse_list.append(mse)\n",
@@ -266,7 +257,6 @@
     "mean_mae = np.mean(mae_list)\n",
     "mean_a_r2 = np.mean(test_adjusted_r2_list)\n",
     "\n",
-    "# Print average metrics across folds\n",
     "print(\"Metrics for kriging\")\n",
     "print(f\"  Average MSE: {mean_mse:.5f}\")\n",
     "print(f\"  Average MAE: {mean_mae:.5f}\")\n",
